Video streaming operators python bindings unit tests (#1225)
# Python Binding Tests for Video Streaming Operators

## Overview

This PR adds Python binding tests (pytest) for the video streaming
operators, complementing the existing C++ unit tests. The test suite
validates the Python bindings for `VideoStreamingClientOp`,
`StreamingServerResource`, `StreamingServerUpstreamOp`, and
`StreamingServerDownstreamOp`.

## What's Added

### 📦 New Test Files

**Client Tests**
(`operators/video_streaming/video_streaming_client/python/tests/`):
- `test_streaming_client_op_bindings.py` - 30 test functions (38 test
executions with parametrized variants)
- `conftest.py` - Pytest fixtures for client tests
- `README.md` - Detailed test documentation

**Server Tests**
(`operators/video_streaming/video_streaming_server/python/tests/`):
- `test_streaming_server_ops_bindings.py` - 42 test functions (51 test
executions with parametrized variants)
- `conftest.py` - Pytest fixtures for server tests
- `README.md` - Detailed test documentation

**Summary Documentation**:
- `PYTEST_SUMMARY.md` - High-level overview of all Python binding tests
- `UNIT_TESTS_SUMMARY.md` - Updated with cross-references to pytest
documentation

### 🧪 Test Coverage (89 Test Executions from 72 Test Functions)

> **Note on Test Counts:** The test suite contains 72 test functions.
When pytest runs parametrized tests (tests with multiple input
variants), each variant counts as a separate test execution. This
results in 89 total test executions: 72 base test functions + 17
parametrized variants (8 client + 9 server).

#### Client Tests (38 test executions)
- **Operator Binding Tests** (20+ tests)
  - Basic creation and configuration
- Parameter validation (video dimensions, network settings, streaming
modes)
  - Method availability and inheritance
  - Memory management and operator reuse
  - Edge cases (extreme resolutions, FPS, ports)

- **Integration Tests** (2 tests)
  - Application context integration
  - Fragment

--- a/operators/video_streaming/video_streaming_server/python/CMakeLists.txt
+++ b/operators/video_streaming/video_streaming_server/python/CMakeLists.txt
@@ -73,3 +73,14 @@ file(GENERATE
     OUTPUT "${HOLOHUB_PYTHON_MODULE_OUT_DIR}/video_streaming_server/__init__.py"
     CONTENT "${INIT_PY_CONTENT}"
 )
+
+# Add Python binding tests if testing is enabled and Python bindings are built
+if(BUILD_TESTING AND HOLOHUB_BUILD_PYTHON)
+    include(add_python_tests)
+    add_python_tests(
+        INPUT "tests"
+        WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
+        PREFIX "video_streaming_server_pytest"
+        PYTEST_ARGS "-v"
+    )
+endif()
