Dev: Update VS Code Dev Container tasks
Fixes observed issues when attempting to build and debug the
`volume_rendering` C++ application on a clean Ubuntu 24.04 system.

Changes:
- Build with host networking to avoid "apt update" DNS failures
- Build with C++ or Python explicitly following separation of
  language handling in ef3af00

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
             "WORKSPACE_DIR": "${containerWorkspaceFolder}"
         },
         "options": [
-            "--progress=plain"
+            "--progress=plain",
+            "--network=host"
         ]
     },
     // Features to add to the dev container. More info: https://containers.dev/features.
