--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ rti_license.dat
 # Holoscan streaming client and server binaries and libraries
 **/holoscan_client_cloud_streaming/
 **/holoscan_server_cloud_streaming/
+
+# CLI update check
+.cli_commit_hash
