App: Fix endoscopy_out_of_body_detection data download
Previous behavior: As of ef3af00d, C++ and Python app CMakeLists.txt
are generally not both run in the same configuration pass. Previously
the endoscopy_out_of_body_detection Python app had an implicit
dependency on the sample data download in the C++ app. With ef3af00d,
the Python-only configuration fails to download data, resulting in a
runtime issue.

Fix: There is no Python target to build, so instead we update the
endoscopy_out_of_body_detection_data target to always build by default.

Observed passing result with fix:
```
Test project /workspace/holohub/build/endoscopy_out_of_body_detection
    Start 1: endoscopy_out_of_body_detection_python_test
1/1 Test #1: endoscopy_out_of_body_detection_python_test ...   Passed   27.27 sec

100% tests passed, 0 tests failed out of 1
```

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/endoscopy_out_of_body_detection/CMakeLists.txt
+++ b/applications/endoscopy_out_of_body_detection/CMakeLists.txt
@@ -32,6 +32,7 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
     GXF_ENTITIES_WIDTH 256
     GXF_ENTITIES_CHANNELS 3
     GXF_ENTITIES_FRAMERATE 30
+    ALL
   )
 endif()
 
