split into subfolders
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/surgical_scene_recon/CMakeLists.txt
+++ b/applications/surgical_scene_recon/CMakeLists.txt
@@ -32,10 +32,42 @@ option(HOLOHUB_DOWNLOAD_DATASETS "Download datasets" ON)
 # -----------------------------------------------------------------------------
 # Download the dataset from google drive directly
 if(HOLOHUB_DOWNLOAD_DATASETS)
+# datasets:
+# ├── depth
+# ├── gt_masks
+# ├── images
+# ├── images_right
+# ├── masks
+# └── poses_bounds.npy
   include(holoscan_download_data)
-  holoscan_download_data(pulling
-    URL "https://drive.google.com/drive/folders/1zTcX80c1yrbntY9c6-EK2W2UVESVEug8?usp=sharing"
-    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}/EndoNeRF
+  holoscan_download_data(depth
+    URL "https://drive.google.com/drive/folders/1JpRO1wDfS5U5A7OG3EK31m3bgbmJ8Ub9"
+    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}/EndoNeRF/pulling
+    ALL
+  )
+  holoscan_download_data(gt_masks
+    URL "https://drive.google.com/drive/folders/1aHw1ICEIM6RNV_RGSvF4IOhnvLB7saTI"
+    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}/EndoNeRF/pulling
+    ALL
+  )
+  holoscan_download_data(images
+    URL "https://drive.google.com/drive/folders/1vvKkdi0UiA3-7q0NykQEIE3bkbkuwUF5"
+    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}/EndoNeRF/pulling
+    ALL
+  )
+  holoscan_download_data(images_right
+    URL "https://drive.google.com/drive/folders/1tUfIrUR4kMXrlUXBk8WhOlymlYXMf1EI"
+    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}/EndoNeRF/pulling
+    ALL
+  )
+  holoscan_download_data(masks
+    URL "https://drive.google.com/drive/folders/1xvfAYvklLy3kA1Yly5-Y92v9AhIJihGP"
+    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}/EndoNeRF/pulling
+    ALL
+  )
+  holoscan_download_data(poses_bounds
+    URL "https://drive.google.com/file/d/1Oes4whfibIPHQIAzcIzWxjbCBp2ZZ-3e"
+    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}/EndoNeRF/pulling
     ALL
   )
 endif()
