refactor(gstreamer): Redesign C++ wrapper architecture with separate base classes
Major architectural refactoring to improve type safety and align with GStreamer's object hierarchy:

- Split ObjectBase and MiniObjectBase for different GStreamer object types
  - ObjectBase: For GstObject types (Element, Pipeline, Bus, Pad)
  - MiniObjectBase: For GstMiniObject types (Buffer, Caps, Memory, Message)

- Improved template parameter naming (Derived → DerivedT, NativeType → NativeTypeT)
  with local type aliases for readability

- Renamed sink() → ref_sink() to match gst_object_ref_sink() convention

- Added type-safe casting with gst::static_object_cast<T>() using GType validation
  via g_type_check_instance_cast()

- New dedicated wrapper classes: AppSrc, Bus, Element, Pipeline, Pad, Allocator,
  CudaContext, CudaPoolAllocator

- Enhanced API with methods like add_many(), link_many(), set_properties(),
  find_and_set_property(), parse_state_changed()

- Replaced raw GStreamer macros and C API calls with type-safe wrapper methods
  throughout GstSrcBridge and GstVideoRecorderOperator

Benefits: Compile-time type safety, runtime type checking, cleaner RAII-based API,
reduced boilerplate, better maintainability.

Signed-off-by: Gil Shapira <gshapira@nvidia.com>

--- a/operators/gstreamer/CMakeLists.txt
+++ b/operators/gstreamer/CMakeLists.txt
@@ -32,6 +32,7 @@ pkg_check_modules(GSTREAMER_APP REQUIRED gstreamer-app-1.0)
 
 # Create the Holoscan GStreamer Bridge library
 add_library(holoscan_gstreamer_bridge SHARED
+  gst/app_src.cpp
   gst/buffer.cpp
   gst/caps.cpp
   gst/memory.cpp
@@ -100,6 +101,11 @@ if(GSTREAMER_CUDA_FOUND)
     target_compile_options(holoscan_gstreamer_bridge PRIVATE
         ${GSTREAMER_CUDA_CFLAGS_OTHER}
     )
+
+    # Suppress unstable API warnings for CUDA
+    target_compile_definitions(holoscan_gstreamer_bridge PRIVATE
+        GST_USE_UNSTABLE_API
+    )
 else()
     message(STATUS "GStreamer CUDA support: DISABLED (gstreamer-cuda-1.0 not found - requires GStreamer 1.24+)")
 endif()
@@ -109,13 +115,21 @@ install(TARGETS holoscan_gstreamer_bridge DESTINATION lib)
 
 # Install headers
 install(FILES
+  gst/allocator.hpp
+  gst/app_src.hpp
   gst/buffer.hpp
+  gst/bus.hpp
   gst/caps.hpp
   gst/config.hpp
+  gst/cuda_context.hpp
+  gst/element.hpp
   gst/error.hpp
   gst/memory.hpp
   gst/message.hpp
+  gst/mini_object.hpp
   gst/object.hpp
+  gst/pad.hpp
+  gst/pipeline.hpp
   gst/video_info.hpp
   gst_src_bridge.hpp
   gst_video_recorder_operator.hpp
