--- a/applications/gstreamer/gst_video_recorder/CMakeLists.txt
+++ b/applications/gstreamer/gst_video_recorder/CMakeLists.txt
@@ -27,6 +27,8 @@ target_link_libraries(gst-video-recorder
   PRIVATE
   holoscan::core
   holoscan::ops::gstreamer_bridge
+  holoscan::ops::v4l2
+  holoscan::ops::format_converter
 )
 
 # Install target
