refactor: rename GstVideoRecorderOperator to GstVideoRecorderOp
Rename operator to follow holohub convention (Op suffix instead of Operator):
- Class: GstVideoRecorderOperator → GstVideoRecorderOp
- Files: gst_video_recorder_operator.* → gst_video_recorder_op.*
- Update all references in app code, CMake, docs, and metadata

Also fix:
- Move shebang to line 1 in install_deps.sh
- Add missing headers to gst/object.hpp (<cstdint>, <type_traits>, <utility>)

Addresses CodeRabbit review comments for naming consistency and header self-containment.

Signed-off-by: Gil Shapira <gshapira@nvidia.com>

--- a/operators/gstreamer/CMakeLists.txt
+++ b/operators/gstreamer/CMakeLists.txt
@@ -39,7 +39,7 @@ add_library(holoscan_gstreamer_bridge SHARED
   gst/message.cpp
   gst/video_info.cpp
   gst_src_bridge.cpp
-  gst_video_recorder_operator.cpp
+  gst_video_recorder_op.cpp
 )
 
 # Create alias for consistent naming
@@ -132,7 +132,7 @@ install(FILES
   gst/pipeline.hpp
   gst/video_info.hpp
   gst_src_bridge.hpp
-  gst_video_recorder_operator.hpp
+  gst_video_recorder_op.hpp
   DESTINATION include/holoscan/operators/gstreamer)
 
 # Export the library for use by other CMake projects
