--- a/applications/gstreamer/gst_video_recorder/CMakeLists.txt
+++ b/applications/gstreamer/gst_video_recorder/CMakeLists.txt
@@ -35,3 +35,43 @@ target_link_libraries(gst-video-recorder
 install(TARGETS gst-video-recorder DESTINATION bin/gst_video_recorder)
 
 
+if(BUILD_TESTING)
+    # Set the test directories and variables
+    set(RECORDING_DIR ${CMAKE_CURRENT_BINARY_DIR}/recording_output)
+
+    # Remove the recording directory if it exists
+    if(EXISTS ${RECORDING_DIR})
+        file(REMOVE_RECURSE ${RECORDING_DIR})
+    endif()
+
+    # Create the recording directory
+    file(MAKE_DIRECTORY ${RECORDING_DIR})
+
+    # Set the output file
+    set(OUTPUT_FILE ${RECORDING_DIR}/test_output.mp4)
+    message(STATUS "Output test file: ${OUTPUT_FILE}")
+
+    # Test 1: check if the pipline runs successfully
+    add_test(
+        NAME gst_video_recorder_test
+        COMMAND gst-video-recorder --source pattern --count 10 -o ${OUTPUT_FILE}
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    )
+
+    # Set the test passing if the pipline runs successfully
+    set_tests_properties(gst_video_recorder_test PROPERTIES
+        DEPENDS gst-video-recorder
+        PASS_REGULAR_EXPRESSION "EOS processed, pipeline finished cleanly"
+    )
+
+    # Test 2: check if the output file was created
+    add_test(
+        NAME gst_video_recorder_output_file_test
+        COMMAND bash -c "test -f ${OUTPUT_FILE}"
+    )
+
+    # Make the file check test depend on the pipeline test
+    set_tests_properties(gst_video_recorder_output_file_test PROPERTIES
+        DEPENDS gst_video_recorder_test
+    )
+endif()
