Add CI Tests for GStream Video Recorder App (#1279)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Tests**
* Added integration tests for the video recording flow: a pipeline run
that must finish cleanly and a follow-up check that verifies the
recorded output file; test setup/teardown creates and cleans a test
output directory and enforces execution order.
* **Documentation**
* Added testing instructions to the README (appears in Quick Start and
Architecture sections).

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>
Signed-off-by: eagostini <eagostini@nvidia.com>

--- a/applications/gstreamer/gst_video_recorder/CMakeLists.txt
+++ b/applications/gstreamer/gst_video_recorder/CMakeLists.txt
@@ -35,3 +35,46 @@ target_link_libraries(gst-video-recorder
 install(TARGETS gst-video-recorder DESTINATION bin/gst_video_recorder)
 
 
+if(BUILD_TESTING)
+    # Set and create the recording directory
+    set(RECORDING_DIR ${CMAKE_CURRENT_BINARY_DIR}/recording_output)
+    file(MAKE_DIRECTORY ${RECORDING_DIR})
+
+    # Set the output file
+    set(OUTPUT_FILE ${RECORDING_DIR}/test_output.mp4)
+    message(STATUS "Output test file: ${OUTPUT_FILE}")
+
+    # Test 1: check if the pipeline runs successfully
+    add_test(
+        NAME gst_video_recorder_test
+        COMMAND $<TARGET_FILE:gst-video-recorder> --source pattern --count 10 -o ${OUTPUT_FILE}
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    )
+
+    # Set the test passing if the pipeline runs successfully
+    set_tests_properties(gst_video_recorder_test PROPERTIES
+        PASS_REGULAR_EXPRESSION "EOS processed, pipeline finished cleanly"
+    )
+
+    # Test 2: check if the output file was created
+    add_test(
+        NAME gst_video_recorder_output_file_test
+        COMMAND bash -c "test -f ${OUTPUT_FILE}"
+    )
+
+    # Make the file check test depend on the pipeline test
+    set_tests_properties(gst_video_recorder_output_file_test PROPERTIES
+        DEPENDS gst_video_recorder_test
+    )
+
+    # Test 3: check if the output file is a valid MPEG video file
+    add_test(
+        NAME gst_video_recorder_valid_mpeg_test
+        COMMAND bash -c "ffprobe -v error ${OUTPUT_FILE}"
+    )
+
+    # Make the validation test depend on the file check test
+    set_tests_properties(gst_video_recorder_valid_mpeg_test PROPERTIES
+        DEPENDS gst_video_recorder_output_file_test
+    )
+endif()
