App: Implement UCXX Endoscopy Tool Tracking demo
Feature updates:
- Adds UCXX Endoscopy Tool Tracking application consisting of two
  Holoscan SDK applications (publisher/subscriber) connected via UCXX
  transmission and GXF-based GPU tensor serialization
- Updates UCXX operators with GXF-based GPU tensor serialization,
  discarding flatbuffer serialization based on design and performance
  feedback
- Adds test coverage (in progress)

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/distributed/ucxx_endoscopy_tool_tracking/CMakeLists.txt
+++ b/applications/distributed/ucxx_endoscopy_tool_tracking/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025 Holoscan Team
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,13 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cmake_minimum_required(VERSION 3.20)
-project(distributed_applications LANGUAGES NONE)
-
-add_subdirectory(grpc)
-add_subdirectory(ucx)
-
-add_holohub_application(ucxx_endoscopy_tool_tracking
-    DEPENDS OPERATORS ucxx_send_receive
-              lstm_tensor_rt_inference
-              tool_tracking_postprocessor)
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
