--- a/operators/ucxx_send_receive/tests/CMakeLists.txt
+++ b/operators/ucxx_send_receive/tests/CMakeLists.txt
@@ -13,26 +13,31 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+find_package(holoscan 3.8 REQUIRED CONFIG)
+
 add_executable(test_ucxx_ops
   test_ucxx_ops.cc
 )
 
-include(isaac_deps/holoscan)
-include(isaac_deps/gtest)
+target_include_directories(test_ucxx_ops
+  PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
+)
 
 target_link_libraries(test_ucxx_ops
   PRIVATE
-    GTest::gtest_main
     holoscan::core
-    isaac::common::torch_utils
-    isaac::messages::reflection
-    isaac::messages::schemas
-    isaac::ops::ucxx
-    torch
+    holoscan::ops::ucxx
     ucxx
 )
 
-add_test(NAME test_ucxx_ops COMMAND test_ucxx_ops)
+add_test(NAME test_ucxx_ops
+  COMMAND bash -c "(${CMAKE_CURRENT_BINARY_DIR}/test_ucxx_ops 2>&1 \| tee test_ucxx_ops.log) \
+    && (grep -q \"Endpoint connected\" ${CMAKE_CURRENT_BINARY_DIR}/test_ucxx_ops.log || (echo \\\"ERROR: No endpoint connected\\\" && exit 1)) \
+    && (grep -q \"Received tensor with rank 3 and shape: \\[1080, 1920, 3\\]\" ${CMAKE_CURRENT_BINARY_DIR}/test_ucxx_ops.log || (echo \"ERROR: No tensor received\" && exit 1)) \
+    && (grep -q \"Received tensor with dtype: 1 bits: 8\" ${CMAKE_CURRENT_BINARY_DIR}/test_ucxx_ops.log || (echo \"ERROR: No tensor received\" && exit 1)) \
+    && (grep -q \"Endpoint closed\" ${CMAKE_CURRENT_BINARY_DIR}/test_ucxx_ops.log || (echo \"ERROR: No endpoint closed\" && exit 1)) "
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
 set_tests_properties(test_ucxx_ops PROPERTIES
-  LABELS "cpp;operators;gpu"
+  FAIL_REGULAR_EXPRESSION "Endpoint closed with status: Endpoint is not connected"
 )
