--- a/operators/medical_imaging/requirements-runtime.txt
+++ b/operators/medical_imaging/requirements-runtime.txt
@@ -6,8 +6,8 @@ nibabel>=3.2.1
 numpy>=1.21.6
 numpy-stl>=2.12.0
 Pillow>=8.0.0
-pydicom>=2.3.0
-PyPDF2>=2.11.1
+pydicom>=3.0.0
+pypdf>=4.0.0
 scikit-image>=0.17.2
 SimpleITK>=2.0.0
 torch>=2.0.1
