update Orsi main cmake file
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/orsi/CMakeLists.txt
+++ b/applications/orsi/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2022-2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2022-2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,6 +15,8 @@
 
 cmake_minimum_required(VERSION 3.20)
 project(orsi_sample_apps LANGUAGES NONE)
+
+
 
 # Check if Deltacast is found
 set(ORSI_VIDEO_MASTER_SDK_FOUND OFF)
@@ -36,26 +38,24 @@ if(ORSI_VIDEO_MASTER_SDK_FOUND)
     list(APPEND HOLOSCAN_OPERATORS deltacast_videomaster)
 endif()
 
-# Download datasets
-option(HOLOHUB_DOWNLOAD_DATASETS "Download datasets" ON)
-
-# Download ORSI sample data from NGC
-if(HOLOHUB_DOWNLOAD_DATASETS)
-  include(holoscan_download_data)
-  holoscan_download_data(orsi
-    URL  nvidia/clara-holoscan/holoscan_orsi_academy_sample_data:20240206
-    DOWNLOAD_NAME orsi.zip
-    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}
-    GENERATE_GXF_ENTITIES
-    GXF_ENTITIES_HEIGHT 1080
-    GXF_ENTITIES_WIDTH 1920
-    GXF_ENTITIES_CHANNELS 3
-    GXF_ENTITIES_FRAMERATE 30
-  )
-endif()
-
-# Only configure the lib if the applications are build
 if(APP_orsi_multi_ai_ar OR APP_orsi_in_out_body OR APP_orsi_segmentation_ar)
+
+  # Download ORSI sample data from NGC
+  if(HOLOHUB_DOWNLOAD_DATASETS)
+    include(holoscan_download_data)
+    holoscan_download_data(orsi
+      URL  nvidia/clara-holoscan/holoscan_orsi_academy_sample_data:20240206
+      DOWNLOAD_NAME orsi.zip
+      DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}
+      GENERATE_GXF_ENTITIES
+      GXF_ENTITIES_HEIGHT 1080
+      GXF_ENTITIES_WIDTH 1920
+      GXF_ENTITIES_CHANNELS 3
+      GXF_ENTITIES_FRAMERATE 30
+    )
+  endif()
+
+  # Only configure the lib if the applications are build
   add_subdirectory(lib)
 endif()
 
